@@ -2439,6 +2439,7 @@ public:
     virtual bool hasDType() const override { return true; }
     AstVar* varp() const { return m_varp; }  // [After Link] Pointer to variable
     AstScope* scopep() const { return m_scopep; }  // Pointer to scope it's under
+    void scopep(AstScope* nodep) { m_scopep = nodep; }
     // op1 = Calculation of value of variable, nullptr=complicated
     AstNode* valuep() const { return op1p(); }
     void valuep(AstNode* valuep) { addOp1p(valuep); }
