@@ -1,9 +1,30 @@
-%Error: t/t_class_param_pkg.v:51:16: Syntax Error: Not expecting CLASSORPACKAGEREF under a DOT in dotted expression
-   51 |       if (Pkg::Cls#()::PBASE != 12) $stop;
-      |                ^~~
-%Error: t/t_class_param_pkg.v:51:21: Syntax Error: Not expecting PIN under a CLASSORPACKAGEREF in dotted expression
-   51 |       if (Pkg::Cls#()::PBASE != 12) $stop;
-      |                     ^
-%Error: Internal Error: t/t_class_param_pkg.v:51:21: ../V3LinkDot.cpp:#: Pin not under instance?
-   51 |       if (Pkg::Cls#()::PBASE != 12) $stop;
-      |                     ^
+%Error-UNSUPPORTED: t/t_class_param_pkg.v:43:16: Unsupported: parameterized classes
+                                               : ... In instance t
+   43 |    Pkg::Cls #(.PBASE(4)) c4;
+      |                ^~~~~
+                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
+%Error-UNSUPPORTED: t/t_class_param_pkg.v:45:17: Unsupported: parameterized classes
+                                               : ... In instance t
+   45 |    Pkg::Wrap #(.P(16)) w16;
+      |                 ^
+%Error-UNSUPPORTED: t/t_class_param_pkg.v:14:27: Unsupported: class parameters
+                                               : ... In instance t
+   14 |    class Wrap #(parameter P = 13);
+      |                           ^
+%Error-UNSUPPORTED: t/t_class_param_pkg.v:22:18: Unsupported: class parameters
+                                               : ... In instance t
+   22 |       localparam PMINUS1 = P - 1;   
+      |                  ^~~~~~~
+%Error-UNSUPPORTED: t/t_class_param_pkg.v:21:20: Unsupported: parameterized classes
+                                               : ... In instance t
+   21 |       Cls#(PMINUS1 + 1) c1;
+      |                    ^
+%Error-UNSUPPORTED: t/t_class_param_pkg.v:25:26: Unsupported: class parameters
+                                               : ... In instance t
+   25 |    class Cls #(parameter PBASE = 12);
+      |                          ^~~~~
+%Error-UNSUPPORTED: t/t_class_param_pkg.v:36:22: Unsupported: parameterized classes
+                                               : ... In instance t
+   36 |    typedef Pkg::Cls#(8) Cls8_t;
+      |                      ^
+%Error: Exiting due to
