@@ -1,14 +1,0 @@
-%Error-UNSUPPORTED: t/t_class_static_order.v:23:16: Unsupported: 'static' class members
-                                                  : ... In instance t
-   23 |    static ClsZ z = new;
-      |                ^
-                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
-%Error-UNSUPPORTED: t/t_class_static_order.v:34:16: Unsupported: 'static' class members
-                                                  : ... In instance t
-   34 |    static ClsA a = new;
-      |                ^
-%Error-UNSUPPORTED: t/t_class_static_order.v:35:16: Unsupported: 'static' class members
-                                                  : ... In instance t
-   35 |    static ClsB b = new;
-      |                ^
-%Error: Exiting due to
