@@ -19,6 +19,7 @@ Verilator 4.217 devel
 
 **Minor:**
 
+* Support class static members (#2233).
 * Support force/release (#2431) (#2593). [Shunyao CAD]
 * Support lower dimension looping in foreach loops (#3172). [Ehab Ibrahim]
 * Support up to 64 bit enums for .next/.prev/.name (#3244). [Alexander Grobman]
